# gittchi

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  test2.txt  test_ram.md
gittchi/: __main__.py  cli.py  config.py  paths.py
gittchi/commands/: attach.py  config_cmd.py  hello.py  init.py  petinfo.py  rank.py  react.py  status.py  sync.py  uninstall.py
gittchi/git_io/: commit_reader.py  github_api.py  hook_installer.py  hook_template.py
gittchi/llm/: client.py  personas.py  prompts.py
gittchi/portfolio/: generator.py
gittchi/rules/: achievements.py  commit_xp.py  status.py
gittchi/state/: hmac_key.py  memory.py  pet.py  store.py
gittchi/ui/: ascii_pets.py  render.py
